--- a/M7. Javascript/Exercici de validacions/Exercici 1-2/index.html
+++ b/M7. Javascript/Exercici de validacions/Exercici 1-2/index.html
@@ -17,10 +17,10 @@
     <div class="container p-4">
         <h1 class="display-5">Ejercicio de validación de formulario</h1>
         <div class="row">
-            <div class="col-8">
+            <div class="col-12">
                 <form class="form" id="form">
-                    <div class="row g-4 py-3">
-                        <div class="col-sm-8" id="nameDiv">
+                    <div class="row">
+                        <div class="col-sm-10" id="nameDiv">
                             <label for="name">Nombre completo</label>
                             <input type="text" class="form-control" name="fullName" placeholder="" id="inputName"
                                 aria-label="Full name">
@@ -28,22 +28,22 @@
                                 caracteres inválidos.</p>
                         </div>
                     </div>
-                    <div class="row g-4 py-3">
-                        <div class="col-sm-8">
+                    <div class="row">
+                        <div class="col-sm-10">
                             <label for="email">Email</label>
                             <input type="email" class="form-control" name="email" id="inputEmail">
                             <p class="text-danger warning warning_inputEmail">El email es requerido, y no debe contener
                                 caracteres inválidos.</p>
                         </div>
                     </div>
-                    <div class="row g-4 py-3">
-                        <div class="col-sm-4">
+                    <div class="row">
+                        <div class="col-sm-5">
                             <label for="password">Contraseña</label>
                             <input type="password" class="form-control" name="pwd" id="inputPassword">
                             <p class="text-danger warning warning_inputPassword">La contraseña debe tener mínimo 8
                                 caracteres, una mayúscula y un número</p>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-5">
                             <label for="password">Confirma la contraseña</label>
                             <input type="password" class="form-control" name="pwdCheck" id="inputPasswordCheck">
                             <p class="text-danger warning warning_inputPasswordCheck">Las contraseñas no coinciden</p>
