--- a/M7. Javascript/Exercici de Rating/index.html
+++ b/M7. Javascript/Exercici de Rating/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CSS Animation</title>
+  <title>Exercici de Rating</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- CUSTOM CSS -->
   <link rel="stylesheet" href="style.css">
