--- a/M7. Javascript/Exercici de validacions/Exercici 1-2/index.html
+++ b/M7. Javascript/Exercici de validacions/Exercici 1-2/index.html
@@ -55,6 +55,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Enviar</button>
                     <p class="fs-4 fw-bold text-success warning warning_sentSuccess py-3">Formulario enviado!</p>
+                    <p class="fs-4 fw-bold text-danger warning warning_sentFail py-3">Revisa los campos.</p>
                 </form>
             </div>
         </div>
